@@ -23,7 +23,7 @@ requires 'Error::Pure' => 0.11;
 requires 'File::Spec::Functions' => 0;
 requires 'HTML::Entities' => 0;
 requires 'Imager' => 0;
-requires 'List::MoreUtils' => 0;
+requires 'List::Util' => 1.33;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Image-Keyboard';
